[package]
name = "dioxus-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="0527cff3a59ba3176f7510a7234c5977ce1b17d7", features = ["macro", "hooks"]}
tokio = { version = "1.27.0", features = ["time"] }
uuid = { version = "1.3", features = ["v4"]}

[dev-dependencies]
freya = { git="https://github.com/marc2332/freya", rev="799d54e33abeb94a8e4be0c095ff2deee33591a9" }
